--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple website hosted on GitHub Pages.</p>
+    <h1>أهلا بكم في موقعنا mzt solution</h1>
+    <p>االموقع قادم قريبا</p>
 </body>
 </html>
