--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <h1>أهلا بكم في موقعنا mzt solution</h1>
-    <p>االموقع قادم قريبا</p>
+    <h1>mzt solution أهلا بكم في موقعنا </h1>
+    <p>الموقع قادم قريبا</p>
 </body>
 </html>
